--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "typesafe-builders-core"
-version = "0.1.0"
-edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+description.workspace = true
 
 [dependencies]
