--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "typesafe-builders-derive"
-version = "0.1.0"
-edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+description.workspace = true
 
 [lib]
 proc-macro = true
