--- a/typesafe-builders/Cargo.toml
+++ b/typesafe-builders/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "typesafe-builders"
-version = "0.1.0"
-edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+description.workspace = true
 
 [dependencies]
-typesafe-builders-core = { path = "../typesafe-builders-core" }
-typesafe-builders-derive = { path = "../typesafe-builders-derive" }
+typesafe-builders-core.workspace = true
+typesafe-builders-derive.workspace = true
