--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -7,6 +7,7 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 description.workspace = true
+readme.workspace = true
 
 [lib]
 proc-macro = true
