Add #[optional] attribute to the syntax
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -8,3 +8,9 @@ license.workspace = true
 repository.workspace = true
 description.workspace = true
 readme.workspace = true
+
+[dependencies]
+derive-syn-parse = "0.1.5"
+derive_more = "0.99.17"
+quote = "1.0.26"
+syn = "2.0.13"
