--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,12 @@ members = [
 ]
 
 [workspace.dependencies]
+# Internal deps
 typesafe-builders-core = { path = "typesafe-builders-core", version = "0.1.3" }
 typesafe-builders-derive = { path = "typesafe-builders-derive", version = "0.1.3" }
+
+# External deps
+derive-syn-parse = { version = "0.1.5", default-features = false }
+proc-macro2 = { version = "1.0.56", default-features = false }
+quote = { version = "1.0.26", default-features = false }
+syn = "2.0.13"
