--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -10,7 +10,7 @@ description.workspace = true
 readme.workspace = true
 
 [dependencies]
-derive-syn-parse = "0.1.5"
-derive_more = "0.99.17"
-quote = "1.0.26"
-syn = "2.0.13"
+derive-syn-parse.workspace = true
+proc-macro2.workspace = true
+quote.workspace = true
+syn.workspace = true
