--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -13,7 +13,7 @@ readme.workspace = true
 proc-macro = true
 
 [dependencies]
-quote = "1.0.26"
-syn = "2.0.13"
+quote.workspace = true
+syn.workspace = true
 
 typesafe-builders-core = { path = "../typesafe-builders-core" }
