--- a/typesafe-builders/Cargo.toml
+++ b/typesafe-builders/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 repository.workspace = true
 description.workspace = true
 readme.workspace = true
+keywords.workspace = true
 
 [dependencies]
 typesafe-builders-core.workspace = true
