--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 repository.workspace = true
 description.workspace = true
 readme.workspace = true
+keywords.workspace = true
 
 [dependencies]
 derive-syn-parse.workspace = true
