Wrap attributes in 'builder' and add 'constructor'
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/typesafe-builders/Cargo.toml
+++ b/typesafe-builders/Cargo.toml
@@ -13,3 +13,6 @@ keywords.workspace = true
 [dependencies]
 typesafe-builders-core.workspace = true
 typesafe-builders-derive.workspace = true
+
+[dev-dependencies]
+trybuild = "1.0.80"
