Add toolchain file
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,10 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        components: rustfmt, clippy
 
     - name: Rust Version Info
       run: |
@@ -28,7 +24,7 @@ jobs:
         cargo clippy --version
 
     - name: Format
-      run: cargo +nightly fmt --all -- --check
+      run: cargo fmt --all -- --check
 
     - uses: actions-rs/cargo@v1
       name: Build
