CI: remove --locked
nightly broken again or what...

Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
       run: cargo fmt --all -- --check
 
     - name: Build
-      run: cargo build --locked --release --all-targets --all-features
+      run: cargo build --release --all-targets --all-features # --locked  TODO
 
     - name: Test
       run: cargo test --locked --release --all-targets no --all-features
