--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -18,3 +18,6 @@ typesafe-builders-core.workspace = true
 
 quote.workspace = true
 syn.workspace = true
+
+[dev-dependencies]
+typesafe-builders.workspace = true
