--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace.package]
 edition = "2021"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Oliver Tale-Yazdi <oliver@tasty.limo>"]
 license = "GPL-3.0-only"
 repository = "https://github.com/ggwpez/typesafe-builders"
@@ -19,12 +19,14 @@ members = [
 
 [workspace.dependencies]
 # Internal deps
+typesafe-builders-core = { path = "typesafe-builders-core", version = "0.4.1" }
+typesafe-builders-derive = { path = "typesafe-builders-derive", version = "0.4.1" }
+
+# Only used for doc-tests, therefore one version behind:
 typesafe-builders = { path = "typesafe-builders", version = "0.4.0" }
-typesafe-builders-core = { path = "typesafe-builders-core", version = "0.4.0" }
-typesafe-builders-derive = { path = "typesafe-builders-derive", version = "0.4.0" }
 
 # External deps
 derive-syn-parse = { version = "0.1.5", default-features = false }
 proc-macro2 = { version = "1.0.56", default-features = false }
 quote = { version = "1.0.26", default-features = false }
-syn = "2.0.13"
+syn = "2.0.15"
