Doc generics and const generics
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/typesafe-builders/Cargo.toml
+++ b/typesafe-builders/Cargo.toml
@@ -10,6 +10,8 @@ description.workspace = true
 readme.workspace = true
 keywords.workspace = true
 
+build = "build.rs"
+
 [dependencies]
 typesafe-builders-core.workspace = true
 typesafe-builders-derive.workspace = true
