--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -10,6 +10,8 @@ description.workspace = true
 readme.workspace = true
 keywords.workspace = true
 
+build = "build.rs"
+
 [dependencies]
 derive-syn-parse.workspace = true
 proc-macro2.workspace = true
