--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -10,6 +10,8 @@ description.workspace = true
 readme.workspace = true
 keywords.workspace = true
 
+build = "build.rs"
+
 [lib]
 proc-macro = true
 
