Set MSRV to 1.65
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/ggwpez/typesafe-builders"
 description = "Infallible compile-time checked builders for your structs."
 readme = "README.md"
 keywords = ["macros"]
+msrv = "1.65.0"
 
 [workspace]
 resolver = "2"
