--- a/typesafe-builders-core/Cargo.toml
+++ b/typesafe-builders-core/Cargo.toml
@@ -7,17 +7,12 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 description.workspace = true
-readme.workspace = true
+readme = "README.md"
 keywords.workspace = true
-msrc.workspace = true
-
-build = "build.rs"
+rust-version.workspace = true
 
 [dependencies]
 derive-syn-parse.workspace = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
-
-[dev-dependencies]
-typesafe-builders.workspace = true
