--- a/typesafe-builders-derive/Cargo.toml
+++ b/typesafe-builders-derive/Cargo.toml
@@ -7,11 +7,9 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 description.workspace = true
-readme.workspace = true
+readme = "README.md"
 keywords.workspace = true
-msrc.workspace = true
-
-build = "build.rs"
+rust-version.workspace = true
 
 [lib]
 proc-macro = true
@@ -21,6 +19,3 @@ typesafe-builders-core.workspace = true
 
 quote.workspace = true
 syn.workspace = true
-
-[dev-dependencies]
-typesafe-builders.workspace = true
