--- a/typesafe-builders/Cargo.toml
+++ b/typesafe-builders/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 description.workspace = true
 readme.workspace = true
 keywords.workspace = true
-msrc.workspace = true
+rust-version.workspace = true
 
 build = "build.rs"
 
